# Devmate

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements.md  run.sh  test_llm_init.py  test_project.py  test_retriever.py  test_skill_matching.py  test_skill_tool.py  test_skills.py
.skills/create_fastapi_service/: SKILL.md
.skills/create_python_project/: SKILL.md
docs/: index.md  internal_fastapi_guidelines.md  project_management_guidelines.md
src/: __init__.py  main.py
src/devmate/agents/: agent.py  prompts.py
src/devmate/mcp/: client.py  server.py
src/devmate/rag/: retriever.py
src/devmate/skills/: __init__.py  manager.py
src/devmate/tools/: tools.py
src/devmate/utils/: config.py  llm.py  logger.py
vector_db/: chroma.sqlite3
