[project]
name = "devmate"
version = "0.1.0"
description = "AI 驱动的编程助手，帮助开发者生成和修改代码库"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai",
    "langchain-chroma",
    "langchain_community",
    "langchain_text_splitters",
    "langchain-tavily",
    "pydantic-settings",
    "python-dotenv",
    "toml",
    "loguru",
    "fastapi",
    "uvicorn",
    "httpx",
    "mcp>=1.26.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
devmate = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "devmate",
]
